--- a/ttt2.html
+++ b/ttt2.html
@@ -20,6 +20,7 @@
         .board {
             display: grid;
             grid-template-columns: repeat(3, 100px);
+            grid-template-rows: repeat(3, 100px);
             grid-gap: 5px;
         }
 
