--- a/ttt3.html
+++ b/ttt3.html
@@ -21,6 +21,7 @@
         .board {
             display: grid;
             grid-template-columns: repeat(3, 100px);
+            grid-template-rows: repeat(3, 100px);
             grid-gap: 5px;
         }
 
